Corrected margin error to section headers on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,6 @@ header {
 /*---------------------------------------Gallery Section*/
 
 .row-gallery {
-   padding-top: 50px;
    background-color: #000;
    justify-content: center;
 }
